--- a/src/weather/styles/weather.scss
+++ b/src/weather/styles/weather.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: column;
     height: 100%;
-    background-image: url("../images/weather.jpg");
+    background-image: url("../images/hc.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
